trashimpl: Fix size limit check to allow automatic deletion

Previously adaptTrashSize() rejected new files whenever 'partitionSize + additionalSize' exceeded the limit, even if removing older/bigger files could make enough room. Now we only reject when the new file itself is larger than the maximum allowed trash size, so the cleanup policy (delete oldest / biggest) works as intended.

BUG: 469598